Restructured repo and cleaned it

--- a/notebooks/Transformer_modelling.ipynb
+++ b/notebooks/Transformer_modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 101,
    "id": "c1737d6d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 102,
    "id": "f2ce145e",
    "metadata": {},
    "outputs": [],
@@ -22,9 +22,9 @@
     "# hyperparameters\n",
     "batch_size = 64 # how many independent sequences will we process in parallel?\n",
     "block_size = 420 # what is the maximum context length for predictions?\n",
-    "max_iters = 7000\n",
+    "max_iters = 9000\n",
     "eval_interval = 500\n",
-    "learning_rate = 3e-4\n",
+    "learning_rate = 5e-4\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "eval_iters = 200\n",
     "n_embd = 384\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "id": "dcb1dc92-65f5-452b-9722-f6491321a034",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "'cuda'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 104,
    "id": "82ca4ecf",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 105,
    "id": "b0fc67b3",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 106,
    "id": "896f9865-ad9a-4de2-97f1-47087124f800",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "97"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 107,
    "id": "4d1ce10e",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 108,
    "id": "87bd4093",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 109,
    "id": "06513051",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 110,
    "id": "c404b3c4",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 111,
    "id": "732871a8",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 112,
    "id": "f237c34b",
    "metadata": {},
    "outputs": [],
@@ -343,8 +343,7 @@
      "output_type": "stream",
      "text": [
       "step 0: train loss 4.6845, val loss 4.6861\n",
-      "step 500: train loss 1.7747, val loss 1.7687\n",
-      "step 1000: train loss 1.2239, val loss 1.2601\n"
+      "step 500: train loss 1.6616, val loss 1.6643\n"
      ]
     }
    ],
@@ -368,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 99,
    "id": "d55c7dc9-9d76-425b-a6a5-b8c88ceca15f",
    "metadata": {},
    "outputs": [
@@ -376,24 +375,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pid was or less exposure to anticipatory for the practice that people had.\n",
-      " And less many fit-fi to 40 nevirons in humans.\n",
-      " And what it cance down colleagues and there's like their Iturbard with simple or animal expanda the professor of you hear something from A few to the increase in life over four over and to eat during circulating there's at least a nature of cancer we've looked at quite in a little bit better to improvement our cascizacation work from one by NPational healthy and in humans, making these increasingly in one waiting multiple new can also be very emphasized to set a cornirectly aton, whether or not you don't want in if so that you want to get input to easier in the day.\n",
-      " There are not a light ofor it into the days when you think corn-relative studies in middle of your curte and putting 80 or oth topics if you're in your line in terms of a muscle storage can well fiding.\n",
-      " That increases in your brains is immedicately corrover.\n",
-      " If you have described to that? So that's excited learning, including what's called anyon, the way that you're a short, but now then you injuries once your melatonin system well aring other to three anymogenes of the tone relativity from lonsts.\n",
-      " Again, you generally ketonin lude later as a put young crasyal.\n",
-      " Mirrowires, the room later.\n",
-      " The stamped with your scradency appear, you are short but a pud remi there.\n",
-      " That's what there best they actually arrive in the way as there.\n",
-      " They're counts vascing and those fining, you might consolve\n"
+      "earing about 60 to five pourse that I do not actually have in a fascinating with the 10 years ago but at 90 and every times fivie minute a guest and ask well my lab face at five to a minute change in a way that would do precer like my evolves my experience of any kind of working oxidation to there's just a measure of close to there's really an extreme information at the 10 years ago.\n",
+      " I think the I come with oxidation has a 200 bramatic workouty elsewhere I came I very laterature to do in my epiled work but whether immunoglobously is just sort of a big tale or whether it takes some present complete amounts of close to nerve work to the pocket of of croissal language really don't summer whether or not course candavians are talking of the tolerance and up all as they observe almost in the previous episode on this aspect of new anxiety in the brain and in these immediate reflex on the brain and so you can see part of the reflex of frequencies and llowing us to not get exactly whether or not conscious consumer or nutritional archatric planning is activated whether or epinephrine in testosterone works it made and think about this neuroplasticity there has effects on both consuming of artificigation, etc.\n",
+      " is just simply temperature from your testosterone and very sugar consumption of cannabis.\n",
+      " Well, especially plants cover the realized specific oxida conscious neural coordination so it's a term for whatever getting test up to each said in 70 rats and oxida tea.\n",
+      " There is another o\n"
      ]
     }
    ],
    "source": [
     "# generate from the model\n",
     "#context = torch.ones((1, 1), dtype=torch.long, device=device)\n",
-    "input_context = \"Prefrontal cortex\"\n",
+    "input_context = \"effects of marijuana\"\n",
     "context = torch.tensor(encode(input_context), dtype=torch.long, device=device)\n",
     "context = context.view(context.shape[0],1)\n",
     "print(decode(m.generate(context, max_new_tokens=1500)[0].tolist()))"
@@ -401,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "id": "fe67b37d",
    "metadata": {},
    "outputs": [],
