--- a/notebooks/Transformer_modelling.ipynb
+++ b/notebooks/Transformer_modelling.ipynb
@@ -343,7 +343,15 @@
      "output_type": "stream",
      "text": [
       "step 0: train loss 4.6845, val loss 4.6861\n",
-      "step 500: train loss 1.6616, val loss 1.6643\n"
+      "step 500: train loss 1.6616, val loss 1.6643\n",
+      "step 1000: train loss 1.2231, val loss 1.2636\n",
+      "step 1500: train loss 1.1015, val loss 1.1475\n",
+      "step 2000: train loss 1.0324, val loss 1.0913\n",
+      "step 2500: train loss 0.9813, val loss 1.0386\n",
+      "step 3000: train loss 0.9501, val loss 1.0133\n",
+      "step 3500: train loss 0.9249, val loss 0.9943\n",
+      "step 4000: train loss 0.9085, val loss 0.9833\n",
+      "step 4500: train loss 0.8913, val loss 0.9689\n"
      ]
     }
    ],
