--- a/notebooks/Transformer_modelling.ipynb
+++ b/notebooks/Transformer_modelling.ipynb
@@ -351,7 +351,8 @@
       "step 3000: train loss 0.9501, val loss 1.0133\n",
       "step 3500: train loss 0.9249, val loss 0.9943\n",
       "step 4000: train loss 0.9085, val loss 0.9833\n",
-      "step 4500: train loss 0.8913, val loss 0.9689\n"
+      "step 4500: train loss 0.8913, val loss 0.9689\n",
+      "step 5000: train loss 0.8777, val loss 0.9609\n"
      ]
     }
    ],
