--- a/notebooks/Transformer_modelling.ipynb
+++ b/notebooks/Transformer_modelling.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "d07a620a",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,15 @@
       "step 3500: train loss 0.9249, val loss 0.9943\n",
       "step 4000: train loss 0.9085, val loss 0.9833\n",
       "step 4500: train loss 0.8913, val loss 0.9689\n",
-      "step 5000: train loss 0.8777, val loss 0.9609\n"
+      "step 5000: train loss 0.8777, val loss 0.9609\n",
+      "step 5500: train loss 0.8683, val loss 0.9542\n",
+      "step 6000: train loss 0.8588, val loss 0.9472\n",
+      "step 6500: train loss 0.8518, val loss 0.9439\n",
+      "step 7000: train loss 0.8404, val loss 0.9377\n",
+      "step 7500: train loss 0.8354, val loss 0.9354\n",
+      "step 8000: train loss 0.8265, val loss 0.9270\n",
+      "step 8500: train loss 0.8213, val loss 0.9269\n",
+      "step 8999: train loss 0.8142, val loss 0.9252\n"
      ]
     }
    ],
@@ -376,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 116,
    "id": "d55c7dc9-9d76-425b-a6a5-b8c88ceca15f",
    "metadata": {},
    "outputs": [
@@ -384,18 +392,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "earing about 60 to five pourse that I do not actually have in a fascinating with the 10 years ago but at 90 and every times fivie minute a guest and ask well my lab face at five to a minute change in a way that would do precer like my evolves my experience of any kind of working oxidation to there's just a measure of close to there's really an extreme information at the 10 years ago.\n",
-      " I think the I come with oxidation has a 200 bramatic workouty elsewhere I came I very laterature to do in my epiled work but whether immunoglobously is just sort of a big tale or whether it takes some present complete amounts of close to nerve work to the pocket of of croissal language really don't summer whether or not course candavians are talking of the tolerance and up all as they observe almost in the previous episode on this aspect of new anxiety in the brain and in these immediate reflex on the brain and so you can see part of the reflex of frequencies and llowing us to not get exactly whether or not conscious consumer or nutritional archatric planning is activated whether or epinephrine in testosterone works it made and think about this neuroplasticity there has effects on both consuming of artificigation, etc.\n",
-      " is just simply temperature from your testosterone and very sugar consumption of cannabis.\n",
-      " Well, especially plants cover the realized specific oxida conscious neural coordination so it's a term for whatever getting test up to each said in 70 rats and oxida tea.\n",
-      " There is another o\n"
+      "No I thought, you know, my body first, I think, fertility and I try, really the best item.\n",
+      " But my body, I doesn't acknowledge it.\n",
+      " And there are a lot of whole things that they can pay attention to.\n",
+      " So I think might not figure out.\n",
+      " And that's really because I think, okay, we are thinking, we neverred translate, CCK and CCicage to train awareness to this left event.\n",
+      " We'll take it every study on.\n",
+      " There are a lot of people who are making algive in the ice back in onese of how coil it is to treat.\n",
+      " So basically the scientists, most people's brain doesn't work, mostly treatments, most ridgentists like me.\n",
+      " They're at making severe 90%, and many against all the scientists of caffeine, which have varieus vasodilation and in general directing and testosterone.\n",
+      " We will talk about the behaviors that are at something.\n",
+      " Now you're in this case that testosterone levels can be done her roughly in a direction between that loss, which brings down a so-called unhealthy effect.\n",
+      " Now the National Institutes are really occuting studied, focus, and lift of course in the future literature circuits that we call effect, obviously during the skin in enduration and effort.\n",
+      " But the first time will start to create risk and that will tend to go activation and protect its effects, but you can go away.\n",
+      " Now that's actually occurring in the muscles from this various kinds of muscle.\n",
+      " Being into that skin root and will allow summing and just really safely speak large.\n",
+      " It's really a second.\n",
+      " But in tur\n"
      ]
     }
    ],
    "source": [
     "# generate from the model\n",
     "#context = torch.ones((1, 1), dtype=torch.long, device=device)\n",
-    "input_context = \"effects of marijuana\"\n",
+    "input_context = \"Neural Plasticity depends\"\n",
     "context = torch.tensor(encode(input_context), dtype=torch.long, device=device)\n",
     "context = context.view(context.shape[0],1)\n",
     "print(decode(m.generate(context, max_new_tokens=1500)[0].tolist()))"
@@ -403,32 +423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 115,
    "id": "fe67b37d",
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.save(model.state_dict(), \"huberman_model.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d88d965b-326a-46b9-a3f9-0076557221ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " you have a comments more than neuroscience matched before going with some sort of emotional and acid physiology.\n",
-    " Now, there's a realm time variation literature of the most neural circuitry system and about about neuroscience and imnulates.\n",
-    " Another of while accessible answer.\n",
-    " There's a various thing that it's observalent systemic then what's commoved these are absolutely signal or supposed breakfast one of the motivating onesight and keeping answering these various kinds of go to have a lot of people listenining laboratore so it's very being unlike, but so laboratory so prinolutinary there are actually than by use ravall each 30 or to 4 minutes and I don't do that sighting in people so get a 30 per people over 1% so discussing from all anti-organzed Spit potently, even, most bed does with in that.\n",
-    " Again, that can also relate to none the chemical that work of like that there was measure the botter has life.\n",
-    " The stomach triality has a ability to specific life and emotionol at the Stanford another in supplementing that are explanted and when the movement system movement movement.\n",
-    " It's absolutely what the lobes of specific types have subjects and this can be also resilients.\n",
-    " You don't.\n",
-    " If you don't want to use or the clowdler of your body 100, you're all iabled, sifying and won't like to what is the way that you want to be veriously tried by a significant way aro for you, for instance, the passagement of your body.\n",
-    " That's predical touce, you can fur alertness you.\n",
-    " Was tr"
    ]
   },
   {
